--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "memo",
+  "name": "elga-nikita-memories",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
@@ -21,10 +21,11 @@
   },
   "devDependencies": {
     "react-scripts": "5.0.1",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.16",
     "tailwindcss": "^3.3.6",
-    "@vitejs/plugin-react": "^4.2.0",
-    "vite": "^4.5.0"
+    "typescript": "^5.2.2"
   },
   "browserslist": {
     "production": [
