--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,10 @@
 {
   "buildCommand": "npm run build",
   "devCommand": "npm start",
-  "installCommand": "npm install",
+  "installCommand": "npm install --legacy-peer-deps",
   "framework": "create-react-app",
   "outputDirectory": "build",
   "rewrites": [
     { "source": "/(.*)", "destination": "/index.html" }
-  ],
-  "env": {
-    "REACT_APP_SITE_NAME": "Elga & Nikita Memories",
-    "REACT_APP_JADIAN_DATE": "2024-11-01",
-    "REACT_APP_ADMIN_USERNAME": "elga_admin",
-    "REACT_APP_ADMIN_PASSWORD": "admin123"
-  }
+  ]
 }
